# winlator-glibc

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  gradle.properties  local.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.en.md  bug_report_zh.md
.github/workflows/: buid.yml  build-box64.yml  build-wine-proton精简.yml  build-wine-winl.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitattributes  box64_env_vars.json  common_dlls.json  container_pattern.tzst  imagefs.txz  imagefs_patches.tzst  pulseaudio.tzst  wine_startmenu.json
app/src/main/assets/box86_64/: box64-0.2.8.tzst  box64-0.3.0.tzst  box64-0.3.1-27a8d19.tzst  box64-0.3.1-649a65b.tzst
app/src/main/assets/box86_64/rcfiles/: box86_64rc-1.rcp
app/src/main/assets/dxwrapper/: d8vk-1.0.tzst  dxvk-2.3.1.tzst  dxvk-2.4-gplasync.tzst  vkd3d-2.12.tzst  vkd3d-2.13.tzst
app/src/main/assets/dxwrapper/cnc-ddraw-6.6/: ddraw.tzst
app/src/main/assets/graphics_driver/: turnip-24.1.0.tzst  turnip-24.3.0-R7v2.tzst  virgl-23.1.9.tzst  zink-22.2.5.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cairo/: CMakeLists.txt  cairo-features.h.in  config.h.in
app/src/main/cpp/ffi/: CMakeLists.txt  fficonfig.h.in
app/src/main/cpp/fluidsynth/: CMakeLists.txt  make_tables.cmake
app/src/main/cpp/glib/: CMakeLists.txt  config.h.in  gen-visibility-macros.cmake  glibconfig.h.in
app/src/main/cpp/pcre2/: CMakeLists.txt
app/src/main/cpp/pixman/: CMakeLists.txt  pixman-config.h.in
app/src/main/cpp/png/: CMakeLists.txt  config.h.in
app/src/main/cpp/virglrenderer/: CMakeLists.txt
app/src/main/cpp/wayland/: .gitignore  CMakeLists.txt
app/src/main/cpp/weston/: CMakeLists.txt
app/src/main/cpp/weston-wrapper/: CMakeLists.txt  input_ops.h  weston-jni.h  weston-wrapper.c  weston-wrapper.h
app/src/main/cpp/winlator/: CMakeLists.txt  patchelf_wrapper.cpp
app/src/main/cpp/xkbcommon/: CMakeLists.txt  config.h.in
app/src/main/cpp/xkbcommon/parser/: parser.c
app/src/main/java/com/winlator/: Box86_64RCFragment.java  ContainerDetailFragment.java  ContainersFragment.java  ContentsFragment.java  ControlsEditorActivity.java  ExternalControllerBindingsActivity.java  InputControlsFragment.java  MainActivity.java  SettingsFragment.java  ShortcutsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/applications/: WinlatorApplication.java
app/src/main/java/com/winlator/box86_64/: Box86_64PresetManager.java
app/src/main/java/com/winlator/container/: Container.java  ContainerManager.java  Shortcut.java
app/src/main/java/com/winlator/contentdialog/: ContentDialog.java  ContentInfoDialog.java  ContentUntrustedDialog.java  DXVKConfigDialog.java  ImportGroupDialog.java  NavigationDialog.java  ShortcutSettingsDialog.java  VKD3DConfigDialog.java
app/src/main/java/com/winlator/contents/: ContentProfile.java  ContentsManager.java  Downloader.java
app/src/main/java/com/winlator/core/: DefaultVersion.java  FileUtils.java  PatchElf.java  ProcessHelper.java  TarCompressorUtils.java  WineInfo.java  WineUtils.java  WinlatorFilesProvider.java
app/src/main/java/com/winlator/eventbus/: BaseEvent.java  EventBus.java  EventPriority.java  ISubscriber.java
app/src/main/java/com/winlator/inputcontrols/: Binding.java  ControlElement.java  ExternalController.java  GamepadState.java
app/src/main/java/com/winlator/managers/: RCManager.java
app/src/main/java/com/winlator/midi/: MidiHandler.java  MidiManager.java  RequestCodes.java
app/src/main/java/com/winlator/renderer/: GLRenderer.java  ScreenFxDialog.java  ScreenFxModel.java
app/src/main/java/com/winlator/widget/: InputControlsView.java  TouchpadView.java  XServerView.java
app/src/main/java/com/winlator/winhandler/: WinHandler.java
app/src/main/java/com/winlator/xenvironment/: ImageFs.java  ImageFsInstaller.java
app/src/main/java/com/winlator/xserver/: ClientOpcodes.java  XClientRequestHandler.java
app/src/main/java/org/freedesktop/wayland/: PtrException.java  RenderSurfaceException.java  WestonActivity.java  WestonJni.java  WestonPointerMotionType.java  WlKeyboardKeyState.java  WlPointerAxisType.java  WlTouch.java  (+1 more)
app/src/main/res/layout/: about_dialog.xml  box86_64_rc_fragment.xml  box86_64_rc_group_fragment.xml  box86_64_rc_group_list_item.xml  box86_64_rc_groups_dialog.xml  box86_64_rc_list_item.xml  box86_64_rc_var.xml  container_detail_fragment.xml  container_list_item.xml  content_dialog.xml  content_info_dialog.xml  content_list_item.xml  dxvk_config_dialog.xml  input_controls_dialog.xml  navigation_dialog.xml  screen_effect_dialog.xml  settings_fragment.xml  shortcut_settings_dialog.xml  vkd3d_config_dialog.xml  xserver_display_activity.xml
app/src/main/res/menu/: container_popup_menu.xml  main_menu.xml  rc_group_menu.xml  rc_new_menu.xml  shortcut_popup_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/winlator/: EventBusUnitTest.java
content/: metadata.json  turnip_builder.sh
content/patches/: compile.patch  meson.patch  stub.patch
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
wayland/: .gitignore  build.gradle
wayland/src/main/cpp/: CMakeLists.txt
wayland/src/main/cpp/cairo/: CMakeLists.txt  cairo-features.h.in
wayland/src/main/cpp/ffi/: CMakeLists.txt
wayland/src/main/cpp/pixman/: CMakeLists.txt
wayland/src/main/cpp/png/: config.h.in
wayland/src/main/cpp/scripts/: utils.cmake  wayland-scanner.cmake
wayland/src/main/cpp/wayland/: CMakeLists.txt  config.h.in
wayland/src/main/cpp/wayland-protocols/: .gitignore  CMakeLists.txt
wayland/src/main/cpp/weston/: CMakeLists.txt  config.h.in
wayland/src/main/cpp/weston-wrapper/: CMakeLists.txt  input_ops.h  rect.c  rect.h  weston-jni.c  weston-jni.h  weston-wrapper.c  weston-wrapper.cpp  weston-wrapper.h
wayland/src/main/cpp/xkbcommon/: CMakeLists.txt
wayland/src/main/cpp/xkbcommon/parser/: parser.h
wayland/src/main/res/layout/: weston_avtivity_layout.xml
(+12 files in other folders)
